Création de la vue

--- a/eazyText/resources/assets/sass/app.scss
+++ b/eazyText/resources/assets/sass/app.scss
@@ -7,6 +7,16 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+body{
+	background-color:grey;
+	color:white;
+}
 
-
+.ligneTitle{
+	background-color:white;
+	height:2em;
+}
+div{
+	padding:0.5em;
+}
 
